--- a/index.css
+++ b/index.css
@@ -26,12 +26,12 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  height: 100vh;
   background-image: url(/images/bg-desktop.svg);
   background-color: #674baf;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  line-height: 1.5;
 }
 
 h1,
@@ -40,8 +40,6 @@ h2 {
 }
 
 .page-container {
-  height: 100vh;
-  width: 100vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -52,20 +50,78 @@ h2 {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 50px 150px;
+  height: 100vh;
+  color: white;
+  padding: 50px;
 }
 
 .page-container .top-row {
-  justify-self: flex-start;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .page-container .middle-row {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.page-container .middle-row img {
+  max-width: 40%;
+  height: auto;
 }
 
 .page-container .middle-row .main-text-content {
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+  max-width: 40%;
+  height: auto;
   margin-left: 50px;
+}
+
+.page-container .bottom-row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  padding: 15px;
+}
+
+.page-container .bottom-row .social-icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 180px;
+}
+
+.page-container .bottom-row .social-icons .social-icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border: 1px solid white;
+  border-radius: 50px;
+  width: 40px;
+  height: 40px;
 }
 /*# sourceMappingURL=index.css.map */
