--- a/index.scss
+++ b/index.scss
@@ -21,12 +21,12 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  height: 100vh;
   background-image: url(/images/bg-desktop.svg);
   background-color: hsl(257, 40%, 49%);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  line-height: 1.5;
 }
 
 h1,
@@ -35,26 +35,56 @@ h2 {
 }
 
 .page-container {
-  //   border: 1px solid black;
-  height: 100vh;
-  width: 100vw;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 50px 150px;
+
+  height: 100vh;
+  color: white;
+  padding: 50px;
 
   .top-row {
-    justify-self: flex-start;
+    display: flex;
   }
 
   .middle-row {
     display: flex;
+    justify-content: center;
+    align-items: center;
+
+    img {
+      max-width: 40%;
+      height: auto;
+    }
 
     .main-text-content {
+      align-self: flex-start;
+      max-width: 40%;
+      height: auto;
       margin-left: 50px;
     }
   }
 
   .bottom-row {
+    display: flex;
+    justify-content: flex-end;
+    padding: 15px;
+
+    .social-icons {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 180px;
+
+      .social-icon {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: 1px solid white;
+        border-radius: 50px;
+        width: 40px;
+        height: 40px;
+      }
+    }
   }
 }
