--- a/index.scss
+++ b/index.scss
@@ -26,7 +26,6 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  line-height: 1.5;
 }
 
 h1,
@@ -36,45 +35,74 @@ h2 {
 
 .page-container {
   display: flex;
+  line-height: 1.5;
   flex-direction: column;
   justify-content: space-between;
 
+  overflow: auto;
   height: 100vh;
   color: white;
-  padding: 50px;
+  padding: 40px 80px;
 
   .top-row {
     display: flex;
+
+    img {
+      max-width: 100%;
+      height: auto;
+    }
   }
 
   .middle-row {
     display: flex;
     justify-content: center;
     align-items: center;
-
+    width: 100%;
     img {
-      max-width: 40%;
+      max-width: 50%;
       height: auto;
     }
 
     .main-text-content {
-      align-self: flex-start;
-      max-width: 40%;
-      height: auto;
-      margin-left: 50px;
+      margin-left: 60px;
+
+      h2 {
+        font-weight: 700;
+        width: 80%;
+        margin-bottom: 15px;
+      }
+
+      button {
+        margin-top: 20px;
+        background-color: white;
+        border-radius: 20px;
+        width: 150px;
+        height: 40px;
+        border: none;
+        box-shadow: 5px 10px 18px hsl(257, 40%, 35%);
+        outline: none;
+        color: $violet;
+        font-weight: 700;
+        transition: all 0.3s ease-in;
+
+        &:hover {
+          color: white;
+          background-color: transparent;
+          border: 1px solid white;
+        }
+      }
     }
   }
 
   .bottom-row {
     display: flex;
     justify-content: flex-end;
-    padding: 15px;
 
     .social-icons {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      width: 180px;
+      width: 150px;
 
       .social-icon {
         display: flex;
@@ -84,7 +112,64 @@ h2 {
         border-radius: 50px;
         width: 40px;
         height: 40px;
+        transition: all 0.3s ease-in;
+        &:hover {
+          color: $violet;
+          background-color: white;
+        }
       }
+    }
+  }
+}
+
+@media screen and (max-width: 675px) {
+  body {
+    background-image: url(/images/bg-mobile.svg);
+  }
+  .page-container {
+    text-align: center;
+    padding: 2rem;
+    height: 100vh;
+    .top-row {
+      margin-bottom: 15px;
+      img {
+        max-width: 50%;
+        height: auto;
+      }
+    }
+    .middle-row {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      margin-bottom: 25px;
+
+      img {
+        max-width: 100%;
+        margin-bottom: 35px;
+      }
+
+      .main-text-content {
+        margin: 0px;
+
+        h2 {
+          width: 100%;
+          font-weight: 400;
+          margin: 0;
+          margin-bottom: 15px;
+        }
+
+        p {
+          font-size: 1rem;
+        }
+
+        button {
+          width: 200px;
+        }
+      }
+    }
+
+    .bottom-row {
+      justify-content: center;
     }
   }
 }
